## Process this file with automake to produce Makefile.in

REFERENCE_MAIN_FILE = mateprint-classes.xml
REFERENCE_DOC_NAME = pymateprint
DOC_MODULE = pymateprint

NULL=

REFERENCE_XML_FILES =                           \
  mateprint-mateprintcontext.xml              \
  mateprint-mateprintconfig.xml               \
  mateprint-mateprintjob.xml	                \
  mateprint-mateprintfont.xml	                \
  mateprint-mateprintfontface.xml	            \
  mateprint-mateprintglyphlist.xml            \
  $(NULL)

include $(top_srcdir)/docs/pygtk-ref-docs.make


EXTRA_DIST += wscript
