## Process this file with automake to produce Makefile.in

REFERENCE_MAIN_FILE = mateprintui-classes.xml
REFERENCE_DOC_NAME = pymateprintui
DOC_MODULE = pymateprintui

NULL=

REFERENCE_XML_FILES =                           \
  mateprintui-mateprintuidialog.xml           \
  mateprintui-mateprintuifontdialog.xml       \
  mateprintui-mateprintuifontselection.xml    \
  mateprintui-mateprintuifontpreview.xml      \
  mateprintui-mateprintuijobpreview.xml       \
  mateprintui-mateprintuipreview.xml          \
  mateprintui-mateprintuipaperselector.xml    \
  $(NULL)

include $(top_srcdir)/docs/pygtk-ref-docs.make

EXTRA_DIST += wscript
